/**
 * SampleStruct
 */
export class GRpcSampleStruct {  
    intColumn : number; // IntColumn  
    longColumn : number; // LongColumn  
    decimalColumn : number; // DecimalColumn  
    doubleColumn : number; // DoubleColumn  
    floatColumn : number; // FloatColumn  
    uintColumn : number; // UintColumn  
    ulongColumn : number; // UlongColumn  
    stringColumn? : string; // StringColumn  
    boolColumn : boolean; // BoolColumn  
    guidColumn : string; // GuidColumn  
    dateTimeColumn : Date; // DateTimeColumn  
    byteColumn : number; // ByteColumn
}